Suppress run-time warning